# INDUVISTA

./: .env.example  .gitignore  PHASE_2_2_TEST_PLAN.md  QUICKSTART.md  README.md  apply_phase16_0a_edits.ps1  docker-compose.override.yml  docker-compose.yml  fix-writable-stale.sql  harden_audit_startup.ps1  induvista-db-20260514-1101.dump  probe_calc_api.ps1  restart_UI_5174.txt  sample_alarm_rules_smoke.csv  setup_and_run_ui_smoke.ps1  setup_audit_db.ps1  smoke_calc_ui_full.ps1  smoke_calc_ui_full_v2.ps1  smoke_enron_ui.py  smoke_test_phase14_10.ps1  smoke_test_phase14_11.ps1  smoke_test_phase14_12.ps1  smoke_test_phase14_2.ps1  smoke_test_phase14_3.ps1  smoke_test_phase14_4.ps1  smoke_test_phase14_6.ps1  smoke_test_phase14_6b.ps1  smoke_test_phase14_7.ps1  smoke_test_phase14_9.ps1  smoke_test_phase15_1.ps1  smoke_test_phase15_2.ps1  smoke_test_phase15_3.ps1  smoke_test_phase15_4a.ps1  smoke_test_phase15_4b.ps1  smoke_test_phase15_5.ps1  smoke_test_phase16_0a.ps1  smoke_test_trend_complete.ps1  test_roc_math.mjs  wire_audit_endpoints.ps1  wire_calc_blocks_route.ps1  (+4 more)
.claude/: settings.json
_hotfix/: MAIN_PY_PATCH.txt  (+4 more)
datahub-client/: .gitignore  README.md  pyproject.toml  requirements.txt
datahub-client/docs/: ARCHITECTURE.md
datahub-client/src/induvista_datahub/: __init__.py  __main__.py  app.py
datahub-client/src/induvista_datahub/config/: __init__.py  manager.py  schema.py
datahub-client/src/induvista_datahub/core/: __init__.py  logging_setup.py  paths.py
datahub-client/src/induvista_datahub/ingest/: __init__.py  pusher.py  store_forward.py
datahub-client/src/induvista_datahub/opc/: __init__.py  base.py  da_reader.py  ua_reader.py
datahub-client/src/induvista_datahub/ui/: __init__.py  main_window.py  settings_tab.py  status_tab.py  tags_tab.py
datahub-client/tests/: test_smoke.py
(+448 files in other folders)
